--- a/lectures/htmlcss/style.css
+++ b/lectures/htmlcss/style.css
@@ -1,4 +1,6 @@
-h1 {
-    color: blue;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
