--- a/lectures/htmlcss/style.css
+++ b/lectures/htmlcss/style.css
@@ -6,7 +6,13 @@ body {
 }
 
 header {
-    background-color: rgba(181, 150, 211, 0.747);
+    background-color: rgba(238, 162, 228, 0.747);
     color: rgb(54, 69, 71);
     padding: 10p 0;
+}
+
+main {
+    margin: 15px;
+    padding: 15px;
+    background-color: rgb(163, 200, 233);
 }
